
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-02-06 MH  1.6.0  Allow SELECT inside larger transactions in the Query Tool
2006-01-30 AP  1.6.0  Fix inherited columns (don't create/edit them) per Peter
                      Eisentraut.
2006-01-30 MH  1.6.0  Add autocompletion to the Query Tool, based on the logic
                      used by psql. Triggered with Control+Space, and 
                      optionally the Tab key as well.
2006-01-30 DP  1.4.2  Add missing files to the Unix tarball, per Andrus
                      xtra/wxbuild/*, src/utils/precomp.cpp, 
                      src/main/pgAdmin3.rc
2006-01-27 DP  1.6.0  Allow the number of rows shown in the Edit Grid to be 
                      limited and add a 'View top 100 rows' option to the
                      table/view context menus. [Magnus Hagander, Dave Page]
2006-01-25 DP  1.6.0  Prevent deletion of the blank item in config editors, and
                      ensure undo will only work on the appropriate line.
2006-01-25 MH  1.6.0  Add a password file editor,
2006-01-23 MH  1.4.2  Read config files in the local encoding scheme
2006-01-22 DP  1.6.0  Rename text docs to match GNUish standards, remove all
                      HTML markup and wrap at col 80.
2006-01-19 DP  1.6.0  Fix capitalisation of menu items. Add '...' to the end of
                      items that open dialogues [Peter Eisentraut]
2006-01-19 MH  1.6.0  Display the client start time on the status dialogue with
                      PostgreSQL 8.1+
2006-01-17 DP  1.6.0  Allow set returning functions to be created.
2006-01-17 DP  1.4.2  Display the definition of set returning procedures 
                      correctly.