@@ -318,6 +318,11 @@ pgNotification *pgConnBase::GetNotification()
     return ret;
 }
 
+int pgConnBase::GetTxStatus()
+{
+    return PQtransactionStatus(conn);
+}
+
 //////////////////////////////////////////////////////////////////////////
 // Execute SQL
 //////////////////////////////////////////////////////////////////////////
