@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-06 DP  1.6.0  Cleanup if the query tool leaves a transaction in an 
+                      error state when the query ends.
 2006-02-06 MH  1.6.0  Allow SELECT inside larger transactions in the Query Tool
 2006-01-30 AP  1.6.0  Fix inherited columns (don't create/edit them) per Peter
                       Eisentraut.
